--- a/AndroidStudioProjects/WithMyBag/app/src/main/res/values/strings.xml
+++ b/AndroidStudioProjects/WithMyBag/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WithMyBag</string>
+    <string name="phone">phone</string>
+    <string name="email">email</string>
+    <string name="name">name</string>
 </resources>
